<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="horizontal|vertical">

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal|vertical">

        <TableLayout
            android:id="@+id/tableEditEvento"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TableRow
                android:id="@+id/tableRowUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_field_login_name"
                    android:layout_gravity="center_vertical" />
                <EditText
                    android:id="@+id/editTextUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="text"
                    android:hint="@string/username_field_login_hint"/>
                </TableRow>

            <TableRow
                android:id="@+id/tableRowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_field_login_name"
                    android:layout_gravity="center_vertical" />
                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="textPassword"
                    android:hint="@string/password_field_login_hint"/>
            </TableRow>
            <TableRow
                android:id="@+id/tableRowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button_text"
                    android:layout_column="1" />
            </TableRow>
        </TableLayout>
    </HorizontalScrollView>
</ScrollView>
