<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="horizontal|vertical">

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal|vertical">

        <TableLayout
            android:id="@+id/tableEditEvento"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TableRow
                android:id="@+id/tableRowTitleCreateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewTitleCreateEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_create_event_text_view"
                    android:layout_gravity="center_horizontal"
                    android:layout_span="2"
                    android:textIsSelectable="false"
                    android:clickable="false"
                    android:autoText="false"></TextView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowAddressEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewAddressEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_text_address_event_text_view"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:id="@+id/editTextAddressEvent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />
            </TableRow>


            <TableRow
                android:id="@+id/tableRowStateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewStateEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sppiner_state_event_text_view"
                    android:layout_gravity="center_vertical" />

                <Spinner
                    android:id="@+id/spinnerStateEvent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowCityEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewCityEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sppiner_city_event_text_view"
                    android:layout_gravity="center_vertical" />

                <Spinner
                    android:id="@+id/spinnerCityEvent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowZone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewZoneEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_zone_event_text_view"
                    android:layout_gravity="center_vertical" />

                <RadioGroup
                    android:id="@+id/radioZone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioRuralZone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_zone_rural_radio_button"
                        android:layout_gravity="center_vertical" />

                    <RadioButton
                        android:id="@+id/radioUrbanZone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_zone_urban_radio_button"
                        android:layout_gravity="center_vertical" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/tableRowCausaAtencion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewCausaAtencion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sppiner_causa_atencion_evento_text_view"
                    android:layout_gravity="center_vertical" />

                <Spinner
                    android:id="@+id/spinnerCausaAtencion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowCaseNumberEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewCaseNumberEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_text_case_number_event_text_view"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:id="@+id/editTextCaseNumberEvent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowDateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewDateEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_date_event_text_view"
                    android:layout_margin="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_gravity="center_vertical" />

                <DatePicker
                    android:id="@+id/editTextDateEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:layout_gravity="center_vertical" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRowTimeEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewTimeEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_time_event_text_view"
                    android:layout_margin="0dp"
                    android:layout_gravity="center_vertical" />


                <TimePicker
                    android:id="@+id/editTextTimeEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:layout_gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRowButtonCreateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonCreateEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_button_text" />

                <Button
                    android:id="@+id/buttonBackList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_button_back_text" />
            </TableRow>
        </TableLayout>
    </HorizontalScrollView>

</ScrollView>
